Changes in version 1.2.1
    
  Bug fixes
    -fixed bugs relating to importData functions

Changes in version 1.2.0
    
  New features
    -added importGenMap to format genetic maps for AlphaSimR
    -added importInbredGeno and importHaplo to make it easier to create a simulation from external data
    -added importSnpChip, importTrait to SimParam to make it easier to manually define traits
    -added pullMarkerGeno and pullMarkerHaplo to make it easier to extract genotypes and haplotypes of specific loci without defining a trait or SNP chip
    
  Bug fixes
    -reduceGenome, mergeGenome and doubleGenome should really now work with pedigree and recombination tracking
    
  Known issues
    -pedigreeCross fails without an appropriate warning for some incomplete pedigrees

Changes in version 1.1.2
    
  Bug fixes
    -added missing #ifdef _OPENMP to OCS.cpp

Changes in version 1.1.1
    
  Bug fixes
    -removed use of PI variable in C++ code which is compilier specific

Changes in version 1.1.0
  
  New features
    -added snpChip argument to pullIbdHaplo for backwards compatibility
    -exposed internal mixed model solvers
    -all selection functions now return a warning when there are not enough individuals
    
  Bug fixes
    -fixed error in pullIbdHaplo when chr isn't NULL
    -fixed an error with assigning 1 QTL and/or SNP
    -changed geno slot from matrix to list to support future RcppArmadillo changes
    -doubleGenome and reduceGenome now work with IBD tracking

Changes in version 1.0.4

  Bug fixes
    -fixed errors in implementation of Gamma Sprinkling model

Changes in version 1.0.3

  Bug fixes
    -fixed formatting error in genetic maps created by runMacs that broke genotype extraction functions

Changes in version 1.0.2

  New features
    -added h2 and H2 to setPhenoGCA
    -pullGeno and pullHaplo functions now report marker names from the genetic map

Changes in version 1.0.1

  Bug fixes
    -removed lazyData field in DESCRIPTION
