@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/misc.R
+% Please edit documentation in R/writePlink.R
 \name{writePlink}
 \alias{writePlink}
 \title{Writes a Pop-class as PLINK files}
@@ -7,59 +7,63 @@
 writePlink(
   pop,
   baseName,
-  trait = 1L,
-  snpChip = 1L,
+  traits = 1,
+  use = "pheno",
+  snpChip = 1,
+  useQtl = FALSE,
   simParam = NULL,
-  chromLength = 10L^8
+  ...
 )
 }
 \arguments{
 \item{pop}{an object of \code{\link{Pop-class}}}
 
-\item{baseName}{a character. Basename of PED and MAP files.}
+\item{baseName}{basename for PED and MAP files.}
 
-\item{trait}{an integer. Which phenotype trait should be used.}
+\item{traits}{an integer indicating the trait to write, a trait name, or a
+function of the traits returning a single value.}
 
-\item{snpChip}{an integer. Which SNP array should be used.}
+\item{use}{what to use for PLINK's phenotype field. Either phenotypes "pheno", 
+genetic values "gv", estimated breeding values "ebv", breeding values "bv", 
+or random values "rand".}
+
+\item{snpChip}{an integer indicating which SNP chip genotype 
+to use}
+
+\item{useQtl}{should QTL genotypes be used instead of a SNP chip. 
+If TRUE, snpChip specifies which trait's QTL to use, and thus these 
+QTL may not match the QTL underlying the phenotype supplied in traits.}
 
 \item{simParam}{an object of \code{\link{SimParam}}}
 
-\item{chromLength}{an integer. The size of chromosomes in base
-pairs; assuming all chromosomes are of the same size.}
+\item{...}{additional arguments if using a function for 
+traits}
 }
 \description{
-Writes a Pop-class as PLINK PED and MAP files
+Writes a Pop-class to PLINK PED and MAP files. The arguments 
+for this function were chosen for consistency with 
+\code{\link{RRBLUP2}}. The base pair coordinate will the locus
+position as stored in AlphaSimR and not an actual base pair 
+position. This is because AlphaSimR doesn't track base pair 
+positions, only relative positions for the loci used in the 
+simulation.
 }
 \examples{
 \dontrun{
 #Create founder haplotypes
-founderPop = quickHaplo(nInd=10, nChr=1, segSites=10)
+founderPop = quickHaplo(nInd=10, nChr=1, segSites=15)
 
 #Set simulation parameters
 SP = SimParam$new(founderPop)
-SP$setSexes(sex = "yes_rand")
-SP$addTraitA(nQtlPerChr = 10)
-SP$addSnpChip(nSnpPerChr = 5)
+SP$setSexes(sex="yes_rand")
+SP$addTraitA(nQtlPerChr=10)
+SP$addSnpChip(nSnpPerChr=5)
+SP$setVarE(h2=0.5)
 
 #Create population
 pop = newPop(rawPop = founderPop)
-pop = setPheno(pop, varE = SP$varA)
-writePlink(pop, baseName="test")
 
-#Test
-test = read.table(file = "test.ped")
-#...sex
-if (!identical(x = c("M", "F")[test[[5]]], y = pop@sex)) { stop() }
-#...pheno (issues with rounding)
-# if (!identical(x = test[[6]], y = pop@pheno[, 1])) { stop() }
-#...genotypes
-x = test[, -(1:6)]  - 1
-x[, 1] = x[, 1] + x[, 2]
-x[, 2] = x[, 3] + x[, 4]
-x[, 3] = x[, 5] + x[, 6]
-x[, 4] = x[, 7] + x[, 8]
-x[, 5] = x[, 9] + x[, 10]
-y = pullSnpGeno(pop)
-if (sum(x[, 1:5] - y) != 0) { stop() }
+# Write out PLINK files
+writePlink(pop, baseName="test")
 }
 }
